test/std/negative/division_by_zero.ls
// Test: Division by Zero
// Category: negative
// Type: negative
// Expected: error

// This test should cause a division by zero
let a = 10
let b = 0
a / b
